[FIX] search box in main menu on tablets under nav arrows (z-index)

--- a/dev/styles/main/header/header.less
+++ b/dev/styles/main/header/header.less
@@ -956,7 +956,7 @@
     top: 0;
     left: auto;
     right: 0;
-    z-index: 3;
+    z-index: 3000;
 }
 
 
